Fri May  3 11:18:51 2002  David Helder  <dhelder@umich.edu>

	* src/{inetaddr,tcp}.h: s/id/async_id/.  id is a reserved
	    word in Objective C.

Thu Apr 25 10:14:07 2002  David Helder  <dhelder@umich.edu>

        * Release GNet 1.1.3
	
	* src/iochannel.h: Doc fixes.
	
	* examples/echoserver.c: Remove debug output. 

Sat Apr 20 17:04:04 2002  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_list_interfaces): Delete buffer.
	(gethostbyaddr_async_child): 

	* tests/hostinfo.c: Delete addresses.

Thu Apr 18 14:13:30 2002  David Helder  <dhelder@umich.edu>

	* src/socks-private.c (gnet_private_socks_tcp_socket_new): Delete
	     socks server address.
	* src/socks-private.c (gnet_private_socks_tcp_socket_new_async): "

	* src/gnet-private.c (gnet_private_inetaddr_sockaddr_new): Set
	    ref_count to 1.  These weren't getting deleted before.
	* src/inetaddr.c (gnet_inetaddr_new_any): "
	
	* src/pack.c (gnet_vunpack): Fix bad mem deref when zeroing
	    out extra mem.

	* src/inetaddr.c (gnet_inetaddr_get_name_async_cancel): Don't
	    delete ia - caller owns!.

	* src/url.c (gnet_url_new): isdigit((int)) cast
	* src/url.c (gnet_url_new): "

	* src/inetaddr.c (gnet_inetaddr_get_name_async_cb): Delete
	    old name first.

	* src/gnet-private.h (_GInetAddrAsyncState ): Add IOChannel field.
	* src/inetaddr.c (gnet_inetaddr_new_async): Save the IOChannel
	* src/inetaddr.c (gnet_inetaddr_new_async_cancel): Unref the
	    IOChannel.
	* src/inetaddr.c (*_get_name_async_*): As above for these funcs.
	* src/tcp.c (*_new_async_*): As above for these funcs.

	* src/inetaddr.c (gnet_inetaddr_new_async_cb): Don't
	    clear the watch.  This isn't necessary now that we
	    have the in_callback flag.

	* tests/dnstest.c (reverse_inetaddr_cb): Don't free name -
	    inetaddr owns it, just cname.

	* tests/dnstest.c (reverse_inetaddr_cb): Delete inetaddr.

	* examples/echoserver.c (async_client_iofunc): Fix number of
	    bytes moved.  Use g_memmove().
