@@ -49,7 +49,7 @@ INSTALL is the standard autoconf INSTALL file.
 Bugs
 ====
 
-Bug reports should be submited through <http://bugzilla.gnome.org>.
+Bug reports should be submitted through <http://bugzilla.gnome.org>.
 
 
 Mailing lists
