@@ -23,7 +23,11 @@
 
 #include <glib.h>
 
-/* This module is experimental, buggy, and unstable.  Use at your own risk. */
+/* 
+   This module is experimental, buggy, and unstable.  Use at your own
+   risk.  To use this module, define GNET_EXPERIMENTAL before
+   including gnet.h.
+*/
 #ifdef GNET_EXPERIMENTAL 
 
 #ifdef __cplusplus
